tests/models/struct/unnamed/i32/fail/min_length.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/struct/unnamed/i32/fail/min_length.rs:2:1
  |
2 | #[model]
  | ^^^^^^^^
  |
  = note: this error originates in the attribute macro `model` (in Nightly builds, run with -Z macro-backtrace for more info)
